--- a/ClientAstree/Views/User/index.cshtml
+++ b/ClientAstree/Views/User/index.cshtml
@@ -203,5 +203,124 @@
         </div>
     </div>
 </div>
+    <footer class="footer footer-big" data-background-color="black">
+            <div class="container">
+              <div class="content">
+                <div class="row">
+                  <div class="col-md-4">
+           
+                    <div class="social-feed">
+                                            <div class="feed-line">
+                        <img src="/img/logo-white.png" alt="">
+                      </div>
+                               <br>
+                      <div class="feed-line">
+                    
+                        <p>Vous voulez fractionner le paiement de votre prime d’assurance Auto chez ASTREE sur une année et sans intérêts ?
+Oui c’est possible...</p>
+                      </div>
+                      <div class="feed-line">
+                     
+<p>En savoir plus</p>                      </div>
 
+                    </div>
+                  </div>
+                  <div class="col-md-2">
+                    <h5>Côté Pratique</h5>
+                    <ul class="links-vertical">
+                      <li>
+                        <a href="https://www.astree.com.tn/taches-courantes/remplir-un-constat/" class="text-muted">
+                          Remplir un constat ?
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://www.astree.com.tn/taches-courantes/foires-aux-questions/" class="text-muted">
+                          Foires aux Questions 
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://www.astree.com.tn/taches-courantes/glossaire/" class="text-muted">
+                          Glossaire
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://www.astree.com.tn/taches-courantes/liens-utiles/" class="text-muted">
+                          Liens utiles
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="col-md-2">
+                    <h5>Siège Social</h5>
+                    <ul class="links-vertical">
+                      <li>
+                        <a href="#pablo" class="text-muted">
+                          45, Avenue Kheireddine Pacha,
+B.P. 780 TUNIS Cedex
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#pablo" class="text-muted">
+                         (+216) 71 90 42 11
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#pablo" class="text-muted">
+                          courrier@astree.com.tn
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+
+                  <div class="col-md-4">
+                    <h5>Follow Us</h5>
+                    <ul class="social-buttons">
+                      <li>
+                        <a href="#pablo" class="btn btn-icon btn-neutral btn-twitter btn-round">
+                          <i class="fab fa-twitter"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#pablo" class="btn btn-icon btn-neutral btn-facebook btn-round">
+                          <i class="fab fa-facebook-square"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#pablo" class="btn btn-icon btn-neutral btn-dribbble btn-round">
+                          <i class="fab fa-dribbble"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#pablo" class="btn btn-icon btn-neutral btn-google btn-round">
+                          <i class="fab fa-google-plus"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#pablo" class="btn btn-icon btn-neutral btn-instagram btn-round">
+                          <i class="fab fa-instagram"></i>
+                        </a>
+                      </li>
+                    </ul>
+                    <h5>
+                      <small>Numbers Don't Lie</small>
+                    </h5>
+                    <h5>14.521
+                      <small class="text-muted">Freelancers</small>
+                    </h5>
+                    <h5>1.423.183
+                      <small class="text-muted">Transactions</small>
+                    </h5>
+                  </div>
+                </div>
+              </div>
+              <hr>
+              <div class="copyright">
+                Copyright ©
+                <script>
+                  document.write(new Date().getFullYear())
+                </script>2024 Creative Tim All Rights Reserved.
+              </div>
+            </div>
+          </footer>
+          
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
